# compux

./: .gitignore  README.md  ROADMAP.md  checksum-compux.exs  mix.exs
.github/workflows/: ci.yml  release.yml
bundle/: Info.plist
lib/: compux.ex
lib/compux/: binary.ex  driver.ex  port_driver.ex  protocol.ex
lib/mix/tasks/: compux.checksum.ex
native/compux/: Cargo.toml
native/compux/src/: main.rs
scripts/: build_app.sh
test/: compux_test.exs
test/compux/: binary_test.exs  port_driver_test.exs  protocol_test.exs
test/support/: fake_sidecar.pl  stub_driver.ex
